--- a/index2.html
+++ b/index2.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class="links">
                     <ul>
-                        <li><a href="homepage.html">Home</a></li>
-                        <li><a href="coursespage.html">Courses</a></li>
-                        <li><a href="achivements.html">Achivements</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index1.html">Courses</a></li>
+                        <li><a href="index2.html">Achivements</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="testimonials.html">Testimonial</a></li>
+                        <li><a href="index4.html">Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="sign">
@@ -43,68 +43,27 @@
             </div>
         </header>
         <main>
-            <div class="testimonials">
-                <div class="testimonials-heading">
-                    <h1>Customer testimonials</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="achivements">
+                <div class="heading">
+                    <h1>Our Achivements</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. soluta aliquam iste ad neque aut deserunt magnam illum quo voluptatum <br> inventore quam accusantium nulla nihil fuga.</p>
                 </div>
-                <div class="testimonials-contents">
-                    <div class="testimonial">
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <div class="comment">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p>
-                        </div>
-                        <div class="details">
-                            <img src="images/team3.png">
-                            <div class="details-text">
-                                <h4>James Nduku</h4>
-                                <p>Software Development</p>
-                            </div>
-                        </div>
+                <div class="figures">
+                    <div>
+                        <h1 id="coursesAvailable" data-target="200">+200</h1>
+                        <p>Courses</p>
                     </div>
-                    <div class="testimonial" >
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <div class="comment">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p>
-                        </div>
-                        <div class="details">
-                            <img src="images/team5.jpg">
-                            <div class="details-text">
-                                <h4>James Nduku</h4>
-                                <p>Software Development</p>
-                            </div>
-                        </div>
+                    <div>
+                        <h1 id="mentors" data-target="5000">500K</h1>
+                        <p>Mentors</p>
                     </div>
-                    <div class="testimonial">
-                        <div class="rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <div class="comment">
-                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."</p>
-                        </div>
-                        <div class="details">
-                            <img src="images/team2.png">
-                            <div class="details-text">
-                                <h4>James Nduku</h4>
-                                <p>Software Development</p>
-                            </div>
-                        </div>
+                    <div>
+                        <h1 id="students" data-target="3700">370k</h1>
+                        <p>Students</p>
+                    </div>
+                    <div>
+                        <h1 id="recognition" data-target="100">+100</h1>
+                        <p>Recognition</p>
                     </div>
                 </div>
             </div>
