--- a/index1.html
+++ b/index1.html
@@ -16,11 +16,11 @@
                 </div>
                 <div class="links">
                     <ul>
-                        <li><a href="homepage.html">Home</a></li>
-                        <li><a href="coursespage.html">Courses</a></li>
-                        <li><a href="achivements.html">Achivements</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index1.html">Courses</a></li>
+                        <li><a href="index2.html">Achivements</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="testimonials.html">Testimonial</a></li>
+                        <li><a href="index4.html">Testimonial</a></li>
                     </ul>
                 </div>
                 <div class="sign">
